# insult-generator

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
insult_generator/: app.py  entities.py  insults.csv  interfaces.py  use_cases.py
tests/: conftest.py  test_app.py  test_entities.py  test_insult_generator.py  test_use_cases.py
